tests/requests/valid/rfc9112_target_authority_ipv6_01.http
CONNECT [::1]:443 HTTP/1.1\r\n
Host: [::1]:443\r\n
\r\n
