tests/requests/invalid/016.http
PUT ///]ufd/: HTTP/1.1\r\n
\r\n